fix color button ios

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,8 @@ a:focus {
 }
 
 button {
+  appearance: none;
+  -webkit-appearance: none;
   color: inherit;
 }
 
